--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,19 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# vercel
-.vercel
+# Never commit build specific files
+*.js
+*.d.ts
 node_modules
+
+# Never commit individual sessions
+.vscode/
+.DS_Store
+
+# Never commit temporary storage
+*.swp
+
+# Never commit logs
+*.log
+*.err
+
+# Overrides
+!jest.config.js
+!.eslintrc.build.js
