--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -10,6 +10,7 @@
     "no-lock": "scripts/noPackageLock.sh"
   },
   "dependencies": {
+    "gun": "^0.2020.1235",
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2"
