--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ci": "yarn install --frozen-lockfile",
     "build": "npx lerna run build",
     "lint": "npx lerna run lint",
-    "lint:fix": "npx lerna exec -- yarn lint --fix",
+    "lint:fix": "npx lerna exec -- yarn lint:fix",
     "no-lock": "npx lerna exec -- yarn no-lock"
   },
   "repository": {
