--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,6 +11,7 @@
     "clean": "npx tsc --build --clean",
     "clean:all": "git clean -fdx",
     "lint": "eslint . --ext .ts",
+    "lint:fix": "yarn lint --fix",
     "no-lock": "scripts/noPackageLock.sh"
   },
   "dependencies": {
