--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/gun": "^0.9.3",
     "@types/node": "^16.9.1",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
