--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -7,18 +7,20 @@
     "build": "next build",
     "start": "next start",
     "stylelint": "npx stylelint '**/*.css' '**/*.scss'",
-    "eslint":  "npx eslint '**/*.tsx' '**/*.ts'",
+    "eslint": "npx eslint '**/*.tsx' '**/*.ts'",
     "lint": "yarn eslint && yarn stylelint",
     "lint:fix": "yarn eslint --fix && yarn stylelint --fix",
     "no-lock": "scripts/noPackageLock.sh"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "gun": "^0.2020.1235",
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/gun": "^0.9.3",
     "@types/node": "^16.9.1",
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
